modificata la grafica in gran parte. vanno aggiustate ancora alcune cose: 1) il tasto edit per le kcal attuali fa uscire sempre lo 0, rompe il cazzo. 2) ho aggiunto una nuova misura, i fianchi. 3) se scrivo delle note durante la fase di registrazazione o nella modifica, nel campo info dati utente le note non vengono visualizzate per intero. 4) La roba delle schede, giorni ed esercizi funziona ancora troppo male a livello di salvataggi. i bottoni home e back a volte fanno cose che non dovrebbero fare per la quale non si puo ancora fare affidamento sul salvataggio dei dati in modo sicuro. nonno mi aspetto grandi cose da te. ho aggiunto e modificato file, alcuni forse manco servono però vabbe in gran parte funziona l'app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
+
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="200dp"
+            android:layout_height="145dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:adjustViewBounds="true"
-            android:layout_margin="5dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/logo">
+            android:src="@drawable/adesivo">
 
         </ImageView>
         <TextView
@@ -70,9 +68,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/drawable_scheda"
-
         android:onClick="Inizia"
-        android:padding="10dp"
-        android:text="Let's go Buddy"
-        android:textSize="18dp" />
+        android:padding="15dp"
+        android:text="Let's go"
+        android:textSize="20dp" />
 </RelativeLayout>
