--- a/app/src/main/res/layout/item_esercizi.xml
+++ b/app/src/main/res/layout/item_esercizi.xml
@@ -5,16 +5,21 @@
     android:orientation="horizontal"
     android:padding="20dp"
    >
-
+    <TextView
+        android:layout_width="0dp"
+        android:layout_weight="0.1"
+        android:layout_height="wrap_content"
+        android:text=""
+        ></TextView>
     <Button
         android:id="@+id/visualizzaEsercizi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Scheda1"
+        android:text="Esercizio"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:onClick="OnSchedaClick"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:layout_marginRight="10dp"
         android:background="@drawable/drawable_scheda"
         >
@@ -24,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:onClick="OnDeleteExPerGiornoClick"
-        android:layout_weight="0.2"
+        android:layout_weight="0.1"
         android:layout_marginRight="10dp"
         android:background="@drawable/ic_baseline_close_24"
         >
