--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -11,9 +11,11 @@
         android:id="@+id/immagineScheda"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
-        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginRight="10dp"
+        android:layout_weight="0.3"
+        android:layout_marginRight="20dp"
         android:src="@drawable/noimg"
         >
 
@@ -22,7 +24,7 @@
         android:id="@+id/visualizzaScheda"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text="Scheda1"
+        android:text="Scheda"
         android:textColor="@color/black"
         android:textSize="18dp"
         android:background="@drawable/drawable_scheda"
@@ -38,8 +40,8 @@
         android:textColor="@color/white"
         android:background="@drawable/ic_baseline_close_24"
         android:onClick="OnDeleteSchedaClick"
-        android:layout_weight="0.2"
-        android:layout_marginRight="10dp"
+        android:layout_weight="0.3"
+        android:layout_marginLeft="10dp"
         >
     </Button>
 
