--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -8,7 +8,9 @@
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:paddingBottom="20dp">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,56 +24,38 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             >
-
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
+                android:layout_weight="0.1"
                 android:layout_height="wrap_content"
-                android:text="Nome:"
-                android:textSize="24dp"
-                android:textColor="@color/black"
-                android:gravity="left"
+                android:text=""
                 ></TextView>
 
             <EditText
                 android:id="@+id/nomeEsercizio"
                 android:layout_width="0dp"
-                android:textSize="18dp"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:gravity="center"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:background="@drawable/drawable_botton_grigio"
+                android:hint="Nome Esercizio"
+                android:padding="6dp"
+                android:textAlignment="center"
+                android:textSize="24dp"
                 >
             </EditText>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginBottom="20dp"
-            >
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="0.45"
-                android:layout_height="wrap_content"
-                android:text="Immagine macchinario:"
-                android:textSize="19dp"
-                android:textColor="@color/black"
-                android:gravity="left"
-                ></TextView>
-
             <ImageButton
                 android:id="@+id/immagineEsercizio"
-                android:layout_height="50dp"
-                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:scaleType="centerCrop"
                 android:adjustViewBounds="true"
-                android:layout_width="0dp"
+                android:layout_weight="0.1"
+                android:layout_marginLeft="10dp"
+                android:layout_height="40dp"
+                android:background="@drawable/drawable_botton_white"
+                android:src="@drawable/noimg"
                 >
             </ImageButton>
 
@@ -80,61 +64,110 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="70dp"
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
+                android:layout_weight="0.2"
                 android:layout_height="wrap_content"
-                android:text="Numero Serie:"
-                android:textSize="18dp"
+                android:text=""
                 android:textColor="@color/black"
-                android:gravity="left"
+                android:textSize="20dp"
+                android:layout_marginRight="10dp"
+                ></TextView>
+            <Button
+                android:id="@+id/bottoneNote"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:textSize="15dp"
+                android:layout_weight="0.5"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/drawable_botton_grigio"
+                android:text="Note"></Button>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"
                 ></TextView>
 
-            <EditText
-                android:id="@+id/numeroSerie"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textAlignment="center"
-                android:textSize="18dp"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-
-                >
-            </EditText>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
+                android:layout_weight="0.175"
                 android:layout_height="wrap_content"
-                android:text="Numero ripetizioni:"
-                android:textSize="18dp"
-                android:textColor="@color/black"
                 android:gravity="left"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                ></TextView>
+            <EditText
+                android:id="@+id/numberPicker"
+                android:layout_width="0dp"
+                android:layout_weight="1.7"
+                android:textSize="18dp"
+                android:textAlignment="center"
+                android:layout_height="wrap_content"
+                android:hint="Serie"
+                android:inputType="numberDecimal"
+                android:padding="6dp"
+                android:background="@drawable/drawable_scheda">
+            </EditText>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.175"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="30dp"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.175"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 ></TextView>
 
             <EditText
                 android:id="@+id/numeroRipetizioni"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.7"
                 android:textSize="18dp"
                 android:textAlignment="center"
-                android:gravity="center"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-
+                android:padding="6dp"
+                android:hint="Numero Ripetizioni"
+                android:background="@drawable/drawable_scheda"
                 >
             </EditText>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.175"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                ></TextView>
         </LinearLayout>
 
         <LinearLayout
@@ -142,125 +175,130 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             >
+
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
+                android:layout_weight="0.175"
                 android:layout_height="wrap_content"
-                android:text="Timer:"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:gravity="left"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 ></TextView>
 
             <EditText
                 android:id="@+id/numeroTimer"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.7"
                 android:textSize="18dp"
                 android:textAlignment="center"
-                android:gravity="center"
                 android:layout_height="wrap_content"
+                android:hint="Recupero"
                 android:inputType="numberDecimal"
-
+                android:padding="6dp"
+                android:background="@drawable/drawable_scheda"
                 >
             </EditText>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.175"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                ></TextView>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
                 android:layout_height="wrap_content"
-                android:text="Tecnica intensita:"
-                android:textSize="18dp"
-                android:textColor="@color/black"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
                 android:gravity="left"
-                ></TextView>
+                android:text=""></TextView>
 
             <EditText
                 android:id="@+id/tecnicaIntensita"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.7"
                 android:gravity="center"
                 android:textAlignment="center"
+                android:hint="Tecnica d'Intensità"
                 android:textSize="18dp"
                 android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:background="@drawable/drawable_scheda"
                 >
             </EditText>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
+                android:gravity="left"
+                android:text=""></TextView>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             >
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
                 android:layout_height="wrap_content"
-                android:text="Esecuzione:"
-                android:textSize="18dp"
-                android:textColor="@color/black"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
                 android:gravity="left"
-                ></TextView>
+                android:text=""></TextView>
 
             <EditText
                 android:id="@+id/esecuzione"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="1.7"
                 android:gravity="center"
                 android:textAlignment="center"
                 android:textSize="18dp"
+                android:hint="Modalità Esecuzione"
                 android:layout_height="wrap_content"
+                android:background="@drawable/drawable_scheda"
+                android:padding="6dp"
+
                 >
             </EditText>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginBottom="20dp"
-            >
-
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.45"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_weight="0.175"
                 android:gravity="left"
-                android:text="Note esercizio:"
-                android:textColor="@color/black"
-                android:textSize="18dp"></TextView>
-
-            <Button
-                android:id="@+id/bottoneNote"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/drawable_scheda"
-                android:text="aggiungi"></Button>
+                android:text=""></TextView>
         </LinearLayout>
+
     </LinearLayout>
+</ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:gravity="center"
         >
         <Button
             android:onClick="ChiudTuttoNonSalva"
-            android:layout_width="40dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
             android:layout_height="40dp"
             android:background="@drawable/ic_baseline_home_24"
             android:contentDescription="Cancella Tutto"
@@ -269,13 +307,13 @@
         <Button
             android:id="@+id/salvaEsercizio"
             android:layout_width="0dp"
-            android:layout_weight="0.6"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:text="Salva"
             android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textSize="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/drawable_scheda"
@@ -285,12 +323,14 @@
 
         <Button
             android:id="@+id/backEsercizio"
-            android:layout_width="40dp"
+            android:layout_width="0dp"
+            android:layout_weight="0.1"
             android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:onClick="back"
+            android:layout_gravity="center"
             android:background="@drawable/ic_baseline_keyboard_backspace_24"
+
             >
         </Button>
     </LinearLayout>
