--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -16,22 +16,31 @@
         >
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.3"
             android:layout_height="wrap_content"
-            android:text="Note:"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:layout_marginRight="10dp"
-            ></TextView>
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="0.175"
+            android:gravity="left"
+            android:text=""></TextView>
         <EditText
             android:id="@+id/noteDettaglio"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.7"
+            android:padding="6dp"
+            android:hint="Note"
+            android:background="@drawable/drawable_botton_grigio"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             >
         </EditText>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="0.175"
+            android:gravity="left"
+            android:text=""></TextView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,7 +53,7 @@
             android:id="@+id/OkNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
+            android:textSize="15dp"
             android:background="@drawable/drawable_scheda"
             android:text="Back"
             android:layout_margin="10dp"
@@ -55,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Salva"
-            android:textSize="18dp"
+            android:textSize="15dp"
             android:background="@drawable/drawable_scheda"
             android:layout_margin="10dp"
             >
