fix bug utente. Aggiunta di fianchi in db

--- a/app/src/main/res/layout/misure_dettaglio.xml
+++ b/app/src/main/res/layout/misure_dettaglio.xml
@@ -378,6 +378,7 @@
                         android:layout_height="wrap_content"
                         ></TextView>
                     <EditText
+                        android:id="@+id/fianchi"
                         android:layout_width="0dp"
                         android:layout_weight="0.6"
                         android:padding="6dp"
